Remove whole target specific .lib directories with "make clean", otherwise their Makefile never gets updated from Makefile.objs

--- a/gemlib/Makefile
+++ b/gemlib/Makefile
@@ -58,9 +58,7 @@ m5475mshort:
 	$(MAKE) libgemv4e16.a TARGET="v4e16"
 
 clean::
-	for TARGET in "" "16" "020" "02016" "v4e" "v4e16"; do \
-		cd .lib$${TARGET} && $(MAKE) clean; \
-	done; :
+	rm -rf .lib*
 
 .PHONY: doc
 
