--- a/RULES
+++ b/RULES
@@ -7,11 +7,13 @@ include $(srcdir)/MISCFILES
 
 AM_DEFAULT_VERBOSITY = 0
 
+ifneq ($(MAKE_TERMOUT),)
 ifeq ($(TERM),xterm)
 am__v_color_cc=\033[27;32m
 am__v_color_ld=\033[27;34m
 am__v_color_rc=\033[27;36m
 am__v_color_off=\033[m
+endif
 endif
 
 ifeq ($(ECHO_E),)
@@ -130,8 +132,10 @@ distdir: $(DISTFILES) distdir-local
 
 distdir-local:
 
+all-recursive:: all-here
+
 all-recursive clean-recursive bakclean-recursive distclean-recursive \
-install-recursive uninstall-recursive dist-recursive:
+install-recursive uninstall-recursive dist-recursive::
 	@set fnord $(MAKEFLAGS); amf=$$2; \
 	list='$(SUBDIRS)'; for subdir in $$list; do \
 	  target=`echo $@ | sed s/-recursive//`; \
@@ -139,7 +143,6 @@ install-recursive uninstall-recursive dist-recursive:
 	  (cd $$subdir && $(MAKE) -r $$target) \
 	   || case "$$amf" in *=*) exit 1;; *k*) fail=yes;; *) exit 1;; esac; \
 	done && test -z "$$fail"
-
 
 #
 # global CFLAGS and ASFLAGS
