--- a/mt_gem.h.in
+++ b/mt_gem.h.in
@@ -2182,8 +2182,14 @@ short * grect_to_array (const GRECT *area, short *array);
 /** LONG global available for use by the application */
 #define mt_AESappglobal(aes_global) (*((long *)&aes_global[3]))
 
-/** Pointer to the base of the resource loaded via mt_rsrc_load(). */
-#define mt_AESrscfile(aes_global)   ((OBJECT **)(*((long *)&aes_global[5])))
+/** Pointer to the base of the trees loaded via rsrc_load(). */
+#define	mt_AESrscfile(aes_global)   (*((OBJECT ***)&aes_global[5]))
+
+/** Pointer to the memory of the resource loaded via mt_rsrc_load(). */
+#define	mt_AESrscmem(aes_global)   (*((void **)&aes_global[7]))
+
+/* length of that memory. Only valid for resource files <64K */
+#define	mt_AESrsclen(aes_global)   (aes_global[9])
 
 /** Current maximum character used by the AES to do vst_height() prior to
     writing to the screen. This entry is only present as of AES version 0x0400.*/
