Use bintray snapshots
gemlib needs mintlib's compiler.h at least.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ env:
 
 # If before_install, install or before_script return a non-zero exit code, the build is errored and stops immediately.
 before_install:
+  # get rid of possibly outdated dependencies
+  - sudo dpkg --remove --force-depends mintlib-m68k-atari-mint pml-m68k-atari-mint
   - wget -q -O - https://github.com/freemint/travis-scripts/archive/master.tar.gz | tar xzf - --strip-components=1 -C .travis
   - if [ -x .travis/before_install.sh ]; then ./.travis/before_install.sh; else true; fi
 
