--- a/mt_gem.h.in
+++ b/mt_gem.h.in
@@ -1254,6 +1254,7 @@ typedef  struct
 #define WF_MINXYWH		103 /**<		 TODO (MagiC 6) */
 #define WF_INFOXYWH		104 /**<		 TODO (MagiC 6.10) */
 #define WF_WIDGETS		200	/**< get/set actual positions of the slider widgets, see mt_wind_get() and mt_wind_set() */
+#define WF_APPICON		201	/**< N.AES 3.0 - set application icon attached to the titlebar of a window, see mt_wind_set() */
 #define WF_USER_POINTER	230	/**< MyAES - attach a 32 bit value to window see  mt_wind_set() see mt_wind_get() */
 #define WF_WIND_ATTACH	231	/**< MyAES - attach a window to another, see mt_wind_set() */
 #define WF_TOPMOST		232	/**< MyAES    set actual window at TOPMOST level, see mt_wind_set() */
